mi primera confirmación de actualización

--- a/style.css
+++ b/style.css
@@ -41,4 +41,7 @@ nav a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
+}
+.greeting {
+    text-align: center;
+}
